# SCAN

./: .pre-commit-config.yaml  README.md  STAC_Spiked_Transformer_Augmenting_Cognition_Smaller_Model.ipynb  __init__.py  example.env  main.py  openai_llm.py  pyproject.toml  scan_agents.py  scan_tasks.py  search_tools.py  test_openai_api.py
.github/workflows/: .pre-commit-config.yaml  testing.yml
scan/: __main__.py  callbacks.py  config.py  errors.py  logging.py  main.py  openai_llm.py  scan_agents.py  scan_tasks.py
scan/checks/: check_openai_api.py
scan/tests/: test_env_variables.py  test_openai_api.py
scan/tools/: __init__.py  search_tools.py
src/: test_openai_api.py
tests/: conftest.py  test_config.py  test_main.py  test_openai_llm.py  test_scan_agents.py  test_scan_tasks.py  test_search_tools.py
