[tool.poetry]
name = "scan"
version = "0.1.0"
description = "This project aims to develop a sophisticated multi-agent system that replicates the functions of the prefrontal cortex (PFC) using AI agents."
authors = ["John Doe <john.doe@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"  # The way crewai set its python requirement made this necessary
crewai = "0.30.11"
duckduckgo-search = "^6.1.0"
langchain_google_genai = "^1.0.4"
python-dotenv = "^1.0.1"
tenacity = "^8.3.0"
openai = "^1.52.1"
tiktoken = "0.7.0"
langchain-community = "0.0.25"
langchain = "0.1.10"
chromadb = "^0.5.15"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.4"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
run-scan = "scan.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select=["E", "B", "F", "UP", "I001"]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
