[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scan"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "This project aims to develop a sophisticated multi-agent system that replicates the functions of the prefrontal cortex (PFC) using AI agents."
authors = [ { name = "Ben Kennedy", email = "benjaminjoelkennedy@gmail.com" } ]
license = "MIT"
dependencies = [
  "chromadb==0.5.18",
  "crewai==0.76.9",
  "duckduckgo-search==6.3.4",
  "google-search-results==2.4.2",
  "langchain==0.3.7",
  "langchain-community==0.3.4",
  "langchain-google-genai==2.0.4",
  "langchain-openai==0.2.6",
  "mypy[faster-cache]==1.13.0",
  "openai==1.54.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "rich==13.9.4",
  "tenacity==9.0.0",
  "tiktoken==0.7.0",
]

[dependency-groups]
dev = [
  "pre-commit==4.0.1",
  "pytest==8.3.3",
  "pytest-cov==6.0.0",
  "ruff==0.7.3",
]

[project.scripts]
run-scan = "scan.main:main"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["crewai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=scan --cov-report term-missing --no-cov-on-fail"

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # print found
  "T203",  # pprint found
]
ignore = [
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
